# simple_matrix

./: .gitignore  CMakeLists.txt  Makefile  gtest.cmake
src/: CMakeLists.txt  addition.hpp  apply.hpp  compare.hpp  main.cpp  matrix_type.hpp  naive_multiplication.hpp  output.hpp  scalar.hpp  simple_matrix.hpp  slice.hpp  transpose.hpp
test/: CMakeLists.txt  backtrace.cpp  backtrace.hpp  matrix_test.cpp  test_main.cpp
